# fastapi-boilerplate

./: .env.example  .gitignore  Dockerfile  FEATURE_GENERATION.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/admin/: auth.py  setup.py  views.py
app/api/: router.py
app/api/ai/: router.py  schemas.py
app/api/api_keys/: model.py  router.py  schemas.py  service.py
app/api/audit/: model.py  router.py  schemas.py  service.py
app/api/auth/: dependencies.py  model.py  oauth.py  router.py  schemas.py  service.py  webauthn_model.py  webauthn_router.py  webauthn_service.py
app/api/billing/: model.py  router.py  schemas.py  service.py
app/api/feature_flags/: model.py  router.py  schemas.py  service.py
app/api/files/: model.py  router.py  schemas.py
app/api/health/: router.py
app/api/jobs/: model.py  router.py  schemas.py  service.py
app/api/notifications/: model.py  router.py  schemas.py  service.py
app/api/organizations/: model.py  router.py  schemas.py  service.py
app/api/search/: router.py  schemas.py  service.py
app/api/todos/: model.py  router.py  schemas.py  service.py
app/api/users/: model.py  router.py  schemas.py  service.py
app/api/webhooks/: model.py  router.py  schemas.py  service.py
app/api/ws/: manager.py  router.py
app/config/: __init__.py  database.py  settings.py
app/core/exceptions/: __init__.py  auth.py  base.py  handlers.py  http.py
app/core/middleware/: __init__.py  logging.py  rate_limit.py  request_id.py  response_envelope.py  security_headers.py
app/core/pagination/: __init__.py  schemas.py
app/core/security/: __init__.py  jwt.py
app/models/: __init__.py
app/services/: base.py  cache.py  email.py  storage.py
app/services/ai/: __init__.py  anthropic_client.py  openai_client.py
app/workers/: celery_app.py
app/workers/tasks/: email.py  maintenance.py  ml.py  notifications.py  webhooks.py
docs/: ARCHITECTURE.md  AUTH.md  DEPLOYMENT.md
migrations/: env.py
migrations/versions/: 0001_phase1_features.py  0002_phase2_features.py  0003_webauthn_credentials.py
scripts/: doctor.sh  generate_module.py  load_tests.py  seed_data.py  setup.sh
tests/: conftest.py
tests/e2e/: test_api_keys_flow.py  test_auth_flow.py  test_todos_flow.py
tests/factories/: __init__.py  api_key.py  notification.py  organization.py  todo.py  user.py
tests/integration/: test_api_keys.py  test_audit.py  test_auth.py  test_billing.py  test_feature_flags.py  test_health.py  test_jobs.py  test_notifications.py  test_organizations.py  test_search.py  test_todos.py  test_webhooks.py
tests/unit/: test_security.py
