[project]
name = "fastapi-postgres-boilerplate"
version = "0.1.0"
description = "Production-ready FastAPI + PostgreSQL boilerplate"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    # Cache
    "redis[asyncio]>=5.2.0",
    "hiredis>=3.1.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.2.0",
    "pyotp>=2.9.0",
    "itsdangerous>=2.2.0",
    # Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    # Task Queue
    "celery[redis]>=5.4.0",
    "flower>=2.0.1",
    # Email
    "resend>=2.5.0",
    # Storage
    "aioboto3>=13.2.0",
    "aiofiles>=24.1.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Observability
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "sentry-sdk[fastapi]>=2.19.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Logging
    "structlog>=24.4.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    # OAuth2
    "authlib>=1.3.0",
    # Payments
    "stripe>=11.3.0",
    # Pagination
    "fastapi-pagination>=0.12.34",
    # AI/ML
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    "tiktoken>=0.8.0",
    "numpy>=2.2.0",
    # Admin Panel
    "sqladmin>=0.18.0",
    "wtforms>=3.1.0",
    # Utils
    "orjson>=3.10.12",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "tenacity>=9.0.0",
    "python-slugify>=8.0.4",
    "pendulum>=3.0.0",
    "ulid-py>=1.1.0",
    "py-webauthn>=0.0.6",
    "webauthn>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "freezegun>=1.5.1",
    "respx>=0.21.1",
    "Locust>=2.32.3",
    "schemathesis>=3.38.0",
]

[project.scripts]
app = "app.main:main"
worker = "app.workers.celery_app:worker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "freezegun>=1.5.1",
    "respx>=0.21.1",
    "Locust>=2.32.3",
    "schemathesis>=3.38.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "TCH",      # flake8-type-checking
    "ANN",      # flake8-annotations
    "S",        # bandit
    "N",        # pep8-naming
    "ASYNC",    # flake8-async
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "S101",    # assert statements (used in tests)
    "S104",    # possible binding to all interfaces
    "B008",    # FastAPI: Query/Depends/Body in default args is the intended pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=25",
    "-v",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that hit the real database",
    "e2e: end-to-end user journey tests",
    "slow: tests that take more than 5 seconds",
    "smoke: basic sanity checks",
    "ml: AI/ML specific tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/workers/*",
    "*/migrations/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
